codemod: package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "userhut",
-  "version": "1.0.2",
   "description": "Userhut JavaScript library",
+  "private": false,
+  "version": "1.0.2",
   "author": "Bjorn Krols (https://byteboomers.com)",
   "license": "MIT",
   "keywords": [
@@ -21,6 +22,7 @@
   "scripts": {
     "build": "webpack --mode production --progress"
   },
+  "husky": {},
   "dependencies": {
     "@babel/runtime": "^7.4.4",
     "tuai": "^1.0.1"
@@ -32,5 +34,6 @@
     "babel-loader": "^8.0.6",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2"
-  }
+  },
+  "peerDependencies": {}
 }
