--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "license": "MIT",
   "keywords": [
     "authentication",
+    "login",
     "signin",
-    "signup"
+    "signup",
+    "userhut"
   ],
   "homepage": "https://github.com/byteboomers/userhut-js#readme",
   "repository": {
@@ -22,7 +24,11 @@
   "scripts": {
     "build": "webpack --mode production --progress"
   },
-  "husky": {},
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "tuai": "^1.0.6"
@@ -32,6 +38,8 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
   },
