--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "main": "dist/main.js",
   "scripts": {
-    "build": "webpack --mode production --progress"
+    "build": "webpack --mode production --progress",
+    "prettier": "prettier --write **/*.js **/*.json **/*.yml **/*.md"
   },
   "husky": {
     "hooks": {
